# dot_testing

./: .gitignore  .gitmodules  .mailmap  .sops.yaml  LICENSE  Makefile  README  README.md  TODO  bootstrap.nix  config.h  config.mk  configuration.nix  desktop.nix  environ  firefox_setup  flake.nix  hardware-configuration.nix  home.nix  i3pystatus.nix  install.sh  mail.nix  main.nix  misc.md  mlg.nix  netbox.nix  paste  ryande.nix  shime  st.1  st.c  virtbox.nix  x.c  xps.nix  yt
.config/: .gitignore
bash/: bashrc  profile
boxes/: inspiron.nix  iso.nix  mainsail.nix  mlg.nix  netbox.nix  virtbox.nix  xps.nix
bspwm/: bspwmrc
builds/: archutils.nix  dmenu.nix  dwm.nix  flake.nix  flasktrack.nix  gmail_mail_bridge.nix  jsfw.nix  lappy-utils.nix  pash.nix  pcomon.nix  rebuild.nix  sssg.nix  st.nix  tilp.nix  utils.nix  xbattmon.nix
c/: anaconda.c  boid.c  colors.c  scream.c  simplestatus.c  timer.c  timerlib.c
common/: bootstrap.nix  desktop.nix  gaming.nix  i3pystatus.nix  machines.nix  main.nix  minecraft.nix  nvidia.nix  ryande.nix  shader.glsl  steam.nix  testing.nix
config/: aristotle.nix  copernicus.nix  default.nix
docs/: misc.md
etc/: southwest_tracker.py
git/: config
home/: terminal.nix  tty-progs.nix  tty.nix  x11-progs.nix  x11.nix
lappy/: README.md  configuration.nix  hardware-configuration.nix  jsfw.json
lappy-config/: default.nix
lib/: default.nix  machines.nix
luakit/: settings
ppkgs/input_forward/: default.nix  pyproject.toml
ppkgs/input_forward/input_forward/: __init__.py  __main__.py  cli.py  client.py  devices.py  server.py
(+577 files in other folders)
